# moving_targets

./: CMakeLists.txt  README.md  package.xml
include/: gz_compat.h  target_motion.h  unicycle_planner.h  waypoint.h
include/path_follower/: base_follower.h  linear_path.h  orbit.h  random_walk.h  random_waypoints.h  straight_line.h
include/path_following/: linear_path.h
include/path_manager/: base_manager.h  half_plane_manager.h  radius_manager.h
launch/: spawn_mover.launch  test.launch
matlab/: se2_motion_planning.m  uni_pursuit.slx
models/moving_person_standing/: model.config  model.sdf
models/moving_person_walking/: model.config  model.sdf
src/: target_motion.cpp  test.cpp  unicycle_planner.cpp
src/path_follower/: linear_path.cpp  orbit.cpp  random_walk.cpp  random_waypoints.cpp  straight_line.cpp
src/path_manager/: half_plane_manager.cpp  radius_manager.cpp
srv/: MovingTargets.srv
test/: waypoint_test.cpp
